--- a/estilos/style.css
+++ b/estilos/style.css
@@ -277,18 +277,7 @@ header .action button i {
     width: 2.1rem;
     height: auto;
     position: absolute;
-    top: 8.5%;
+    top: 4.1rem;
     right: 15%;
     display: none;
-}
-
-.hamb span {
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: var(--text-color1);
-}
-
-.hamb .mid {
-    margin: 7px 0;
 }
